--- a/Django_Amazon/requirements.txt
+++ b/Django_Amazon/requirements.txt
@@ -8,6 +8,9 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
+django-localflavor==3.0.1
+django-money==1.3.1
+django-phone-field==1.8.1
 django-rest-auth==0.9.5
 djangorestframework==3.12.2
 drf-yasg==1.20.0
@@ -18,9 +21,12 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 packaging==20.9
+Pillow==8.1.2
+py-moneyed==0.8.0
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.7
+python-stdnum==1.16
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
