--- a/Django_Amazon/requirements.txt
+++ b/Django_Amazon/requirements.txt
@@ -2,9 +2,10 @@ asgiref==3.3.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.4.7
+cowsay==3.0
 defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
@@ -12,6 +13,7 @@ django-localflavor==3.0.1
 django-money==1.3.1
 django-phone-field==1.8.1
 django-rest-auth==0.9.5
+django-smtp-ssl==1.0
 djangorestframework==3.12.2
 drf-yasg==1.20.0
 idna==2.10
@@ -24,14 +26,16 @@ packaging==20.9
 Pillow==8.1.2
 py-moneyed==0.8.0
 pycparser==2.20
+pyfiglet==0.7
 PyJWT==2.0.1
 pyparsing==2.4.7
 python-stdnum==1.16
 python3-openid==3.2.0
 pytz==2021.1
+qrcode==6.1
 requests==2.25.1
 requests-oauthlib==1.3.0
-ruamel.yaml==0.17.2
+ruamel.yaml==0.16.13
 ruamel.yaml.clib==0.2.2
 six==1.15.0
 sqlparse==0.4.1
