--- a/Django_Amazon/requirements.txt
+++ b/Django_Amazon/requirements.txt
@@ -10,6 +10,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
+django-cors-middleware==1.5.0
 django-localflavor==3.0.1
 django-money==1.3.1
 django-phone-field==1.8.1
