--- a/Django_Amazon/requirements.txt
+++ b/Django_Amazon/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
 django-cors-middleware==1.5.0
+django-csp==3.7
 django-http-referrer-policy==1.1.1
 django-localflavor==3.0.1
 django-money==1.3.1
